--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the data and extract features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -54,6 +61,56 @@
     "        y = np.append(y, [extract_labels(window)])\n",
     "    else:\n",
     "        total += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dict of labels for each feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "features = {\n",
+    "    0: 'mag_x_mean',\n",
+    "    1: 'mag_y_mean',\n",
+    "    2: 'mag_z_mean',\n",
+    "    3: 'mag_resolved_mean',\n",
+    "    4: 'bar_mean',\n",
+    "    5: 'light_mean',\n",
+    "    6: 'mag_x_var',\n",
+    "    7: 'mag_y_var',\n",
+    "    8: 'mag_z_var',\n",
+    "    9: 'mag_resolved_var',\n",
+    "    10: 'bar_var',\n",
+    "    11: 'light_var',\n",
+    "    12: 'mag_x_fft_1',\n",
+    "    13: 'mag_x_fft_2',\n",
+    "    14: 'mag_y_fft_1',\n",
+    "    15: 'mag_y_fft_2',\n",
+    "    16: 'mag_z_fft_1',\n",
+    "    17: 'mag_z_fft_2',\n",
+    "    18: 'mag_resolved_fft_1',\n",
+    "    19: 'mag_resolved_fft_2',\n",
+    "    20: 'bar_fft_1',\n",
+    "    21: 'bar_fft_2',\n",
+    "    22: 'light_fft_1',\n",
+    "    23: 'light_fft_2'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code below makes figures plotting features versus eachother with class labels for each point"
    ]
   },
   {
@@ -182,42 +239,6 @@
     "green_patch = mpatches.Patch(color='green', label='Outdoors')\n",
     "plt.legend(handles=[red_patch, green_patch])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "features = {\n",
-    "    0: 'mag_x_mean',\n",
-    "    1: 'mag_y_mean',\n",
-    "    2: 'mag_z_mean',\n",
-    "    3: 'mag_resolved_mean',\n",
-    "    4: 'bar_mean',\n",
-    "    5: 'light_mean',\n",
-    "    6: 'mag_x_var',\n",
-    "    7: 'mag_y_var',\n",
-    "    8: 'mag_z_var',\n",
-    "    9: 'mag_resolved_var',\n",
-    "    10: 'bar_var',\n",
-    "    11: 'light_var',\n",
-    "    12: 'mag_x_fft_1',\n",
-    "    13: 'mag_x_fft_2',\n",
-    "    14: 'mag_y_fft_1',\n",
-    "    15: 'mag_y_fft_2',\n",
-    "    16: 'mag_z_fft_1',\n",
-    "    17: 'mag_z_fft_2',\n",
-    "    18: 'mag_resolved_fft_1',\n",
-    "    19: 'mag_resolved_fft_2',\n",
-    "    20: 'bar_fft_1',\n",
-    "    21: 'bar_fft_2',\n",
-    "    22: 'light_fft_1',\n",
-    "    23: 'light_fft_2'\n",
-    "}"
    ]
   },
   {
